--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A material-ui wrapper for ReDoc",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -p tsconfig.build.json"
+    "prebuild": "rimraf dist",
+    "build": "tsc -p tsconfig.build.json",
+    "postbuild": "copyfiles package.json dist",
+    "publish": "npm publish dist"
   },
   "repository": {
     "type": "git",
@@ -23,8 +26,10 @@
   "devDependencies": {
     "@material-ui/core": "^4.12.1",
     "@types/styled-components": "^5.1.11",
+    "copyfiles": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rimraf": "^3.0.2",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5"
   },
