copy README to build output folder

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
-    "postbuild": "copyfiles package.json dist",
+    "postbuild": "copyfiles package.json README.md dist",
     "publish": "npm publish dist"
   },
   "repository": {
