--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
     "postbuild": "copyfiles package.json README.md dist",
+    "prepublish": "npm run build",
     "publish": "npm publish dist"
   },
   "repository": {
